<resources>
    <string name="app_name" translatable="false">TripShare</string>
    <!-- Strings used for login -->
    <string name="login_title">Login</string>
    <string name="signup_title">Sign up</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="no_account">Not a member ?</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!--    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>-->
    <string name="name_hint">Name</string>
    <string name="confirm_password_hint">Confirm your password</string>
    <string name="invalid_email_err">Invalid E-mail address</string>
    <string name="invalid_pass_length_err">Password can\'t be less than 6 characters</string>
    <string name="email_required_err">Email is required</string>
    <string name="pass_required_err">Password is required</string>
    <string name="invalid_confirm_pass_err">Confirm password does not match</string>
    <string name="create_post_title">Plan new trip</string>
    <string name="edit_trip_title">Trip title</string>
    <string name="edit_trip_title_hint" translatable="false">E.g., Trip to Vietnam...</string>
    <string name="trip_dates">Dates</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="public_txt">Public</string>
    <string name="private_txt">Private</string>
    <string name="privacy_setting">Privacy Settings</string>
    <string name="public_scope">Anyone can view your tripPlan</string>
    <string name="private_scope">Only you can view your tripPlan</string>
    <string name="reset_password">Reset password</string>
    <string name="success">Success</string>
    <string name="success_message">New password have send to your email!</string>
    <string name="failure">Fail</string>
    <string name="failure_message">Reset password fail</string>
    <string name="count_places">places</string>
    <string name="add_note_hint">Add note</string>
    <string name="like_btn_txt">Like</string>
    <string name="view_txt">views</string>
    <string name="share_btn_txt">Share</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="no_internet_description">Please check your Internet connection and try again</string>
    <string name="error_title">Error occur</string>
    <string name="try_again">Try again</string>
    <string name="exit">Exit</string>
    <string name="add_place_title">Add a place</string>
    <string name="search_place_hint">Search by name</string>
    <string name="delete_post_title">Delete</string>
    <string name="delete_post_message">Are you sure yout want to delete this tripPlan?</string>
    <string name="brief_description_hint">Enter a brief description about your lovely trip...</string>
    <string name="content_rating_hint">Write your thoughts about the trip...</string>
    <string name="edit_trip_title_required">Trip title *</string>
    <string name="edit_trip_dates_title_required">Dates *</string>
    <string name="edit_brief_description_title">Brief description</string>
    <string name="pick_cover_img_title_required">Pick a cover image about the trip! *</string>

    <!--    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>-->
</resources>