<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/SubHeading"
        android:text="@string/privacy_setting"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"
        />

    <LinearLayout
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:longClickable="true"
        android:contextClickable="false"
        android:id="@+id/publicChoose"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="48dp"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Menu"
            android:text="@string/public_txt" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/public_scope" />

    </LinearLayout>

    <LinearLayout
        android:clickable="true"
        android:longClickable="true"
        android:contextClickable="false"
        android:id="@+id/privateChoose"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="48dp"
        android:layout_below="@+id/publicChoose"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Menu"
            android:text="@string/private_txt" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/private_scope" />

    </LinearLayout>
</RelativeLayout>