<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/margin_padding_size_large"
    android:paddingVertical="@dimen/margin_padding_size_xxlarge"
    tools:context=".ui.login.LoginActivity"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/app_logo_transparent" />

    <TextView
        android:id="@+id/title"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        style="?attr/textAppearanceHeadlineMedium"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:text="@string/login_title"
        android:layout_marginVertical="@dimen/margin_padding_size_small"
        />

    <LinearLayout
        android:id="@+id/formLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:orientation="vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editEmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginBottom="@dimen/margin_padding_size_small"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="3"
                android:hint="@string/email_hint"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginBottom="@dimen/margin_padding_size_small"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="3"
                android:hint="@string/password_hint"
                />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/formLayout"
        android:text="@string/login_title"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:paddingVertical="@dimen/margin_padding_size_medium"
        />

    <Button
        android:stateListAnimator="@animator/button_scale_animator"
        android:id="@+id/forgotPasswordBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginBtn"
        android:layout_alignParentEnd="true"
        android:textColor="@color/hyper_link"
        android:text="@string/forgot_password"
        app:rippleColor="@android:color/transparent"
        style="@style/Widget.Material3.Button.TextButton"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/forgotPasswordBtn"
        >

        <TextView
            android:id="@+id/notMemberTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:text="@string/no_account" />

        <Button
            android:stateListAnimator="@animator/button_scale_animator"
            android:id="@+id/signupBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/notMemberTxt"
            android:layout_centerVertical="true"
            android:textColor="@color/hyper_link"
            app:rippleColor="@android:color/transparent"
            style="@style/Widget.Material3.Button.TextButton"
            android:text="@string/signup_title"
            />
    </RelativeLayout>
</RelativeLayout>