<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/auth_layout_padding"
    tools:context=".ui.login.LoginActivity"
    >
    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/app_logo_transparent"
        android:contentDescription="@string/app_name"
        />

    <TextView
        android:id="@+id/title"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginBottom="@dimen/auth_title_margin_bottom"
        style="@style/MainTitleText"
        android:textAllCaps="true"
        android:text="@string/reset_password"
        />

    <LinearLayout
        android:id="@+id/formLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/title"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editEmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/auth_item_margin_bottom"
            app:errorEnabled="true"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="3"
                android:hint="@string/email_hint"
                />

        </com.google.android.material.textfield.TextInputLayout>



    </LinearLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/login_btn_padding_vertical"
        android:layout_below="@id/formLayout"
        android:text="@string/reset_password"/>



</RelativeLayout>