<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true"
        android:fitsSystemWindows="true"
    >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/collapseToolbarLayout"
            app:toolbarId="@+id/toolbar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:layout_scrollInterpolator="@android:anim/accelerate_decelerate_interpolator"
            app:titleCollapseMode="fade"
            app:collapsedTitleGravity="center"
            app:titleEnabled="true"
            app:titleTextEllipsize="end"
            app:expandedTitleTextColor="@android:color/transparent"
            app:contentScrim="@color/white"
            >

            <FrameLayout
                app:cardBackgroundColor="?attr/colorOnPrimary"
                android:gravity="bottom|center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/colorOnPrimary"
                >
                <ImageView
                    android:id="@+id/coverImg"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:src="@drawable/vinhhalong"
                    android:scaleType="fitXY"
                    />
                <androidx.cardview.widget.CardView
                    android:clipToPadding="false"
                    android:clipChildren="false"
                    app:cardElevation="10dp"
                    app:cardCornerRadius="10dp"
                    android:layout_marginBottom="@dimen/margin_padding_size_medium"
                    app:cardPreventCornerOverlap="true"
                    android:layout_marginTop="70dp"
                    android:layout_marginHorizontal="@dimen/margin_padding_size_large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <LinearLayout
                        android:paddingHorizontal="@dimen/margin_padding_size_large"
                        android:paddingVertical="@dimen/margin_padding_size_medium"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >

                        <EditText
                            android:text=""
                            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                            android:layout_weight="1"
                            android:id="@+id/tripTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:paddingVertical="@dimen/margin_padding_size_medium"
                            android:textStyle="bold"
                            android:inputType="text|textMultiLine"
                            android:scrollHorizontally="false"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:focusedByDefault="false"
                            android:hint="@string/edit_trip_title"
                            android:maxLines="8"
                            android:maxLength="180"
                            />
                        <RelativeLayout
                            android:paddingVertical="@dimen/margin_padding_size_small"
                            android:gravity="center_vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >

                        <Button
                            android:id="@id/tripDates"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:drawableLeft="@drawable/ic_baseline_calendar_month_24"
                            android:drawablePadding="@dimen/margin_padding_size_small"
                            android:stateListAnimator="@null"
                            android:backgroundTint="@android:color/transparent"
                            android:background="@null"
                            android:textColor="@color/quantum_black_hint_text"
                            android:textStyle="bold"
                            android:textAllCaps="false"
                            android:paddingHorizontal="0dp"
                            android:text="Trip dates"
                            />
                            <com.google.android.material.imageview.ShapeableImageView
                                android:clickable="true"
                                android:id="@+id/authorAvatar"
                                android:layout_width="?minTouchTargetSize"
                                android:layout_height="?minTouchTargetSize"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:layout_gravity="center"
                                android:padding="2dp"
                                android:scaleType="centerCrop"
                                app:srcCompat="@drawable/img_placeholder"
                                app:shapeAppearanceOverlay="@style/CircleAvatar"
                                app:strokeColor="?attr/colorOnPrimary"
                                app:strokeWidth="2dp"
                                android:stateListAnimator="@animator/button_scale_animator"
                                />

                        </RelativeLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </FrameLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                app:contentInsetEnd="?attr/actionBarSize"
                app:contentInsetStartWithNavigation="0dp"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                app:layout_collapseMode="pin"
                app:contentInsetStart="0dp"
                app:menu="@menu/post_detail_menu"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_new_24_white"
                android:elevation="0dp"
                >
            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabGravity="start"
            app:tabIndicatorGravity="bottom"
            app:tabBackground="?attr/colorOnPrimary"
            android:contentDescription="TAB LAYOUT"
            android:background="?attr/colorOnPrimary"
            app:tabMode="scrollable"
            app:tabIndicatorColor="@color/quantum_orange800"
            app:tabSelectedTextColor="@color/quantum_orange800"
            app:tabSelectedTextAppearance="?attr/textAppearanceTitleMedium"
            app:tabTextAppearance="?attr/textAppearanceTitleMedium"
            app:tabTextColor="@color/quantum_grey600"
            app:tabIndicatorFullWidth="true"
            app:tabPaddingStart="@dimen/margin_padding_size_large"
            app:tabPaddingEnd="@dimen/margin_padding_size_large"
            android:clipToPadding="false"
            android:hint=""
            />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/contentViewPaper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:background="@color/quantum_grey100"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:fitsSystemWindows="true"
        android:clipToPadding="false"
        android:paddingBottom="?minTouchTargetSize"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/shadow"
        app:layout_anchorGravity="top"
        app:layout_anchor="@id/bottomAppBar"
        />
    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="?minTouchTargetSize"
        android:visibility="visible"
        android:layout_gravity="bottom"
        app:layout_behavior="com.google.android.material.bottomappbar.BottomAppBar$Behavior"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/likeBtn"
                app:toggleCheckedStateOnClick="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/like_btn_txt"
                android:checkable="true"
                app:iconTint="@color/like_icon_color"
                app:icon="@drawable/favorite_icon_toggle"
                style="@style/Widget.Tripblog.PostDetail.BottomAppBar.Button"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/viewCountTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/likeBtn"
                android:layout_toLeftOf="@id/shareBtn"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/margin_padding_size_small"
                app:icon="@drawable/ic_outline_remove_red_eye_24"
                android:maxLines="1"
                android:text="@string/view_txt"
                style="@style/Widget.Tripblog.PostDetail.BottomAppBar.Button"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/shareBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/share_btn_txt"
                app:icon="@drawable/ic_share_24"
                style="@style/Widget.Tripblog.PostDetail.BottomAppBar.Button"
                />
        </RelativeLayout>
    </com.google.android.material.bottomappbar.BottomAppBar>

</androidx.coordinatorlayout.widget.CoordinatorLayout>